cmake_minimum_required(VERSION 3.22)
project(C_Primer_Plus_Source_Code C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Primer_Plus_Source_Code
        1.1.c
        1.2.c
        1.3.c
        14.1book.c
        2.1.c
        2.2fathm_ft.c
        2.3two_func.c
        2.4nogood.c
        3.10escape.c
        3.1platinum.c
        3.2print1.c
        3.3bases.c
        3.4print2.c
        3.5charcode.c
        3.6altnames.c
        3.7showf_pt.c
        3.8typesize.c
        3.9badcount.c
        4.10stringf.c
        4.11intconv.c
        4.12flaotnv.c
        4.13prntval.c
        4.14longstrg.c
        4.15input.c
        4.16varwid.c
        4.17skip2.c
        4.1talkback.c
        4.2praise1.c
        4.3praise2.c
        4.4pizza.c
        4.5defines.c
        4.6printout.c
        4.7width.c
        4.8floats.c
        4.9flags.c
        5.10add_one.c
        5.11post_pre.c
        5.12bottles.c
        5.13addemup.c
        5.14convert.c
        5.16running.c
        5.1shoes1.c
        5.2shoes2.c
        5.3golf.c
        5.4qauare.c
        5.5pound.c
        5.5wheat.c
        5.6divide.c
        5.7rules.c
        5.8sizeof.c
        5.9min_sec.c
        6.1summing.c
        6.2when.c
        6.3while.c
        floaterr.c
        )
